--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
 		},
 		{
 			"matches": [
-				"https://www.facebook.com/*"
+				"https://www.facebook.com/", "https://www.facebook.com/*"
 			],
 			"js": [
 				"./content/fbBlock.js"
@@ -55,8 +55,15 @@
 		}
 	],
 	"action": {
-		"default_popup": "popup.html"
+		"default_popup": "popup.html",
+		"default_title": "FPTU Toolkit"
 	},
+	"icons": {
+		"16": "./icons/icon.png",
+		"32": "./icons/icon.png",
+		"48": "./icons/icon.png",
+		"128": "./icons/icon.png"
+	  },
 	"permissions": [
 		"tabs",
 		"storage"
